fix gotop 功能列表 z-index

--- a/src/views/Home/style.scss
+++ b/src/views/Home/style.scss
@@ -33,7 +33,7 @@
 
   .cus-option{
     position: fixed;
-    z-index: 1;
+    z-index: 10;
     min-width: 20px;
     min-height: 20px;
     right: 15px;
